--- a/.conkerorrc
+++ b/.conkerorrc
@@ -1,4 +1,12 @@
 add_delicious_webjumps("cbilson");
+define_webjump("fg", "http://finance.google.com/");
+define_webjump("fy", "http://finance.yahoo.com/");
+define_webjump("hn", "http://news.ycombinator.com/");
+define_webjump("hub", "http://github.com/search?q=%s");
+define_webjump("mm", "http://mail.milliman.com/");
+define_webjump("mg", "http://mail.google.com/");
+
+require("block-content-focus-change.js");
 
 interactive("instapaper", "Send the current page to InstaPaper.",
             function (I) {
@@ -55,8 +63,143 @@ interactive("instapaper-link", "Send the current link to InstaPaper.",
 define_key(default_global_keymap, "C-x i", "instapaper");
 define_key(default_global_keymap, "C-x I", "instapaper-link");
 
-define_webjump("hn", "http://news.ycombinator.com/");
-define_webjump("fg", "http://finance.google.com/");
-define_webjump("fy", "http://finance.yahoo.com/");
-define_webjump("mm", "http://mail.milliman.com/");
-define_webjump("mg", "http://mail.google.com/");
+interactive("readability_arc90",
+            "Readability is a simple tool that makes reading on the web more enjoyable by removing the clutter around what you are reading",
+            function readability_arc90(I) {
+                var document = I.window.buffers.current.document;
+
+                var readConvertLinksToFootnotes = false;
+                var readStyle = 'style-newspaper';
+                var readSize = 'size-medium';
+                var readMargin = 'margin-wide';
+
+                var _readability_readStyle = document.createElement('SCRIPT');
+                _readability_readStyle.text = 'var readStyle = \'' + readStyle + '\';';
+                document.getElementsByTagName('head')[0].appendChild(_readability_readStyle);
+
+                var _readability_readSize = document.createElement('SCRIPT');
+                _readability_readSize.text = 'var readSize = \'' + readSize + '\';';
+                document.getElementsByTagName('head')[0].appendChild(_readability_readSize);
+
+                var _readability_readMargin = document.createElement('SCRIPT');
+                _readability_readMargin.text = 'var readMargin = \'' + readMargin + '\';';
+                document.getElementsByTagName('head')[0].appendChild(_readability_readMargin);
+
+                var _readability_readConvertLinksToFootnotes = document.createElement('SCRIPT');
+                _readability_readConvertLinksToFootnotes.text = 'var readConvertLinksToFootnotes = ' + readConvertLinksToFootnotes + ';';
+                document.getElementsByTagName('head')[0].appendChild(_readability_readConvertLinksToFootnotes);
+
+                var _readability_script = document.createElement('script')
+                _readability_script.type='text/javascript'
+                _readability_script.src='http://lab.arc90.com/experiments/readability/js/readability.js?x='+(Math.random())
+                document.documentElement.appendChild(_readability_script)
+
+                var _readability_css = document.createElement('link')
+                _readability_css.rel = 'stylesheet'
+                _readability_css.href = 'http://lab.arc90.com/experiments/readability/css/readability.css'
+                _readability_css.type = 'text/css'
+                _readability_css.media = 'all'
+                document.documentElement.appendChild(_readability_css)
+
+                var _readability_print_css = document.createElement('link')
+                _readability_print_css.rel = 'stylesheet'
+                _readability_print_css.href = 'http://lab.arc90.com/experiments/readability/css/readability-print.css'
+                _readability_print_css.media = 'print'
+                _readability_print_css.type = 'text/css'
+                document.getElementsByTagName('head')[0].appendChild(_readability_print_css)
+            });
+
+define_key(content_buffer_normal_keymap, "z", "readability_arc90");
+
+function subscribe_feed(I){
+    var f=false;
+    var reader='http://google.com/reader/preview/*/feed/';
+    var document= I.buffer.document;
+    var ls=document.getElementsByTagName("link");
+    for(var i=0,l;l=ls[i];i++){
+        var t=l.getAttribute('type');
+        var r=l.getAttribute('rel');
+        if(t&&(t=='application/rss+xml'||t=='application/atom+xml')&&r&&r=='alternate'){
+            var h= l.getAttribute('href');
+            if(h.indexOf('http')!=0){
+                var p=(h.indexOf('/')!=0)?'/':document.location.pathname;
+                h='http://'+document.location.hostname+p+h;
+            }
+            document.location=reader+h;
+            f=true;
+        }}
+    if(!f) I.minibuffer.message('Oops. Can\'t find a feed.');
+};
+function subscribe_feed_all(I){
+    var document=I.buffer.document;
+    var reader='http://google.com/reader/preview/*/feed/';
+    var el=document.createElement('div');
+    el.style.zIndex=10000;
+    el.style.position='absolute';
+    el.style.padding='2em';
+    el.style.top=0;
+    el.style.backgroundColor='#ffffcc';
+    el.style.border='1px solid #008000';
+    el.style.color='#000 !important';
+    el.style.fontFamily='Arial, sans-serif';
+    el.style.textAlign='left';
+    el.innerHTML='View the following feeds in Google Reader:';
+    var found = false;
+    var links = document.getElementsByTagName('link');
+    for (var i = 0, link;link = links[i];i++) {
+        var type = link.getAttribute('type');
+        var rel = link.getAttribute('rel');
+        var title = link.getAttribute('title');
+        if (type && (type == 'application/rss+xml' || type == 'application/atom+xml') && rel && rel == 'alternate'){
+            var href = link.getAttribute('href');
+            if (!href.match(/^http/)){
+                var path = (href.match(/^\//)) ? '/' : document.location.pathname;
+                href='http://' + document.location.hostname + path + href;
+            }
+            var previewLink = document.createElement('a');
+            previewLink.href = reader + href;
+            previewLink.innerHTML = ((title) ? title : '') + ' - ' + href;
+            previewLink.style.display='block';
+            previewLink.style.color='#00c';
+            previewLink.style.textDecoration='underline';
+            el.appendChild(previewLink);
+            found = true;
+        }}
+    var close=document.createElement('a');
+    close.innerHTML='hhh Hide this box hhh';
+    close.href='#';
+    close.style.display='block';
+    close.style.marginTop='2em';
+    close.style.color='#00c';
+    close.style.textDecoration='underline';
+    close.addEventListener('click',function() {
+                                   el.style.display='none';
+                                   return false;
+                               }, true);
+    el.appendChild(close);
+    function AddFeedBox() {
+        document.body.insertBefore(el, document.body.firstChild);
+        el.scrollIntoView();
+    }
+    if (!found) I.minibuffer.message('Oops. Can\'t find any feeds for this page.');
+    else void(AddFeedBox());
+};
+interactive("subscribe-feed", "C-u Subscribes to first encountered feed."
+            + "C-u C-u Pops-up a box with all available feeds on the page."
+            + "It is oriented towards google-reader but could potentially be adapted to other sites by changing the 'reader' var.",
+            alternates(subscribe_feed, subscribe_feed_all)
+);
+
+define_key(default_global_keymap, "C-c s", "subscribe-feed");
+
+define_variable("firebug_url", "http://getfirebug.com/firebug-lite.js");
+
+function firebug (I) {
+    var doc = I.buffer.document;
+    var script = doc.createElement('script');
+    script.setAttribute('type', 'text/javascript');
+    script.setAttribute('src', firebug_url);
+    script.setAttribute('onload', 'firebug.init();');
+    doc.body.appendChild(script);
+}
+interactive("firebug", "open firebug lite", firebug);
