--- a/.gitconfig
+++ b/.gitconfig
@@ -21,9 +21,6 @@
 [diff]
 	guitool = bc
 
-#[difftool]
-#	prompt = false
-
 [difftool "bc"]
 	cmd = bcompare $2 $5
 
@@ -36,6 +33,7 @@
 
 [alias]
 	br = branch
+        cb = checkout -b
 	ci = commit
 	cia = commit --amend
 	cim = commit --message
@@ -45,6 +43,7 @@
 	m = merge
 	po = push origin
 	pom = push origin master
+        pub = "!f() { git push -u ${1:-origin} `git symbolic-ref HEAD`; }; f"
 	rb = rebase
 	rbc = rebase --continue
 	rbs = rebase --skip
